set jvm settings for forked vm as described in https://github.com/travis-ci/travis-ci/issues/3396 to avoid jvm crash on travis