@@ -232,6 +232,20 @@
       </plugin>
 
     </plugins>
+    <pluginManagement>
+      <plugins>
+      
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <!-- Travis build workaround -->
+            <argLine>-Xmx1024m -XX:MaxPermSize=512M</argLine>
+          </configuration>
+        </plugin>
+
+      </plugins>
+    </pluginManagement>
   </build>
 
   <reporting>
